@@ -8317,30 +8317,35 @@ gtk_widget_unref (GtkWidget *widget)
  * @clip_rect: a #GdkRectangle or %NULL
  *
  * Create a #GdkPixmap of the contents of the widget and its children.
+ *
  * Works even if the widget is obscured. The depth and visual of the
  * resulting pixmap is dependent on the widget being snapshot and likely
  * differs from those of a target widget displaying the pixmap.
  * The function gdk_pixbuf_get_from_drawable() can be used to convert
  * the pixmap to a visual independant representation.
+ *
  * The snapshot area used by this function is the @widget's allocation plus
  * any extra space occupied by additional windows belonging to this widget
  * (such as the arrows of a spin button).
  * Thus, the resulting snapshot pixmap is possibly larger than the allocation.
- * If @clip_rect is non NULL, the resulting pixmap is shrunken to
+ * 
+ * If @clip_rect is non-%NULL, the resulting pixmap is shrunken to
  * match the specified clip_rect. The (x,y) coordinates of @clip_rect are
  * interpreted widget relative. If width or height of @clip_rect are 0 or
  * negative, the width or height of the resulting pixmap will be shrunken
  * by the respective amount.
  * For instance a @clip_rect <literal>{ +5, +5, -10, -10 }</literal> will
- * chop off 5 pixel at each side of the snapshot pixmap.
- * If non-%NULL, clip_rect will contain the exact widget relative snapshot
+ * chop off 5 pixels at each side of the snapshot pixmap.
+ * If non-%NULL, @clip_rect will contain the exact widget-relative snapshot
  * coordinates upon return. A @clip_rect of <literal>{ -1, -1, 0, 0 }</literal>
  * can be used to preserve the auto-grown snapshot area and use @clip_rect
  * as a pure output parameter.
- * The returned pixmap can be %NULL, if the resulting clip_area was empty.
+ *
+ * The returned pixmap can be %NULL, if the resulting @clip_area was empty.
  *
  * Return value: #GdkPixmap snapshot of the widget
- * Since: 2.16
+ * 
+ * Since: 2.14
  **/
 GdkPixmap*
 gtk_widget_get_snapshot (GtkWidget    *widget,
